tdf#103261 allow postponed text except in .doc

fixes regression from tdf#89317,
commit b39feae4f12b07a0fdb2c8c2a48d5aae613cd7c9.

Change-Id: I0590579997e2c29de171aac91ba4459e0c776cc0
Reviewed-on: https://gerrit.libreoffice.org/29984
Tested-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>