sw/source/filter/ww8/wrtww8.hxx
@@ -658,6 +658,9 @@ public:
     /// If saving page break is preferred as a paragraph attribute (yes) or as a special character (no).
     virtual bool PreferPageBreakBefore() const = 0;
 
+    /// Text in tables can be postponed except for .doc
+    virtual bool AllowPostponedTextInTable() const { return true; }
+
     /// Guess the script (asian/western).
     ///
     /// Sadly word does not have two different sizes for asian font size and
@@ -968,6 +971,8 @@ public:
     virtual MSWordSections& Sections() const override;
 
     virtual bool PreferPageBreakBefore() const override { return true; }
+
+    virtual bool AllowPostponedTextInTable() const override { return false; }
 
     virtual bool SupportsOneColumnBreak() const override { return false; }
 
